# geli

./: Cargo.toml
geli-backend/: Cargo.toml
geli-backend/src/: dfa.rs  lib.rs  regex_builder.rs
geli-cli/: Cargo.toml
geli-cli/src/: main.rs
geli-core/: Cargo.toml
geli-core/src/: lib.rs
geli-frontend/: package-lock.json  package.json  tsconfig.json
geli-frontend/src-tauri/: Cargo.toml  tauri.conf.json
geli-frontend/src-tauri/src/: lib.rs  main.rs
geli-frontend/src/routes/: +layout.svelte  +page.svelte
geli-macros/: Cargo.toml
geli-types/: Cargo.toml
geli-types/src/: bin-expr-simple.json  filter.rs  lexer.rs  lib.rs  parser.rs
